force-app/main/default/objects/rh2__PS_Filter_Audit__c/rh2__PS_Filter_Audit__c.object-meta.xml
<CustomObject>
    <description>Tracks field history on HS Filter</description>
    <label>Filter Audit</label>
    <nameField>
        <label>Filter Audit Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Filter Audits</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>