force-app/main/default/objects/rh2__PS_Filter_Audit__c/fields/rh2__Created_By__c.field-meta.xml
<CustomField>
    <fullName>rh2__Created_By__c</fullName>
    <description>The user that created the filter.</description>
    <inlineHelpText>The user that created the filter.</inlineHelpText>
    <label>Filter Created By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>