force-app/main/default/objects/rh2__PS_Filter_Audit__c/fields/rh2__Created_Date__c.field-meta.xml
<CustomField>
    <fullName>rh2__Created_Date__c</fullName>
    <description>String of the date and time the filter was created.</description>
    <inlineHelpText>String of the date and time the filter was created.</inlineHelpText>
    <label>Filter Created Date</label>
    <length>50</length>
    <type>Text</type>
</CustomField>