force-app/main/default/objects/rh2__PS_Filter_Audit__c/fields/rh2__Filter__c.field-meta.xml
<CustomField>
    <fullName>rh2__Filter__c</fullName>
    <description>The filter for this audit record.</description>
    <inlineHelpText>The filter for this audit record.</inlineHelpText>
    <label>Filter</label>
    <length>20</length>
    <type>Text</type>
</CustomField>