force-app/main/default/objects/rh2__PS_Filter_Audit__c/fields/rh2__Filter_Label__c.field-meta.xml
<CustomField>
    <fullName>rh2__Filter_Label__c</fullName>
    <description>The filter label (the value that is displayed to the user, as opposed to the name value which is used internally).</description>
    <inlineHelpText>The filter label (the value that is displayed to the user, as opposed to the name value which is used internally).</inlineHelpText>
    <label>Filter Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>