force-app/main/default/objects/rh2__PS_Filter_Audit__c/fields/rh2__Filter_Object__c.field-meta.xml
<CustomField>
    <fullName>rh2__Filter_Object__c</fullName>
    <description>The object the filter is querying.</description>
    <inlineHelpText>The object the filter is querying.</inlineHelpText>
    <label>Filter Object</label>
    <length>255</length>
    <type>Text</type>
</CustomField>