force-app/main/default/objects/rh2__PS_Filter_Audit__c/fields/rh2__Filter_Query__c.field-meta.xml
<CustomField>
    <fullName>rh2__Filter_Query__c</fullName>
    <description>The filter query with all sorts and conditions applied.</description>
    <inlineHelpText>The filter query with all sorts and conditions applied.</inlineHelpText>
    <label>Filter Query</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>