force-app/main/default/objects/rh2__PS_Filter_Audit__c/fields/rh2__Last_Modified_By__c.field-meta.xml
<CustomField>
    <fullName>rh2__Last_Modified_By__c</fullName>
    <description>The user that last modified the filter.</description>
    <inlineHelpText>The user that last modified the filter.</inlineHelpText>
    <label>Filter Last Modified By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>